[package]
name = "undiscovered_yt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.0"
directories = "5.0.1"
yt-api = "0.3.2"
rand = "0.8.5"
futures = "0.3.28"
colored = "2.0.4"
clap = { version = "4.4.5", features = ["derive"] }
crossterm = "0.27.0"
chrono = "0.4.31"
open = "5.0.0"
